<resources>
    <string name="app_name">ContactList</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_image_contact">Image Contact</string>
    <string name="str_button_add">Button Add</string>
    <string name="str_save">Save</string>
    <string name="str_update">Update</string>
    <string name="str_delete">Delete</string>
    <string name="str_contact_name">Contact Name</string>
    <string name="str_number_phone">Phone Number</string>
</resources>